# ExpiryTrack

./: .env.example  .gitignore  EXPORT_GUIDE.md  FEATURE_ROADMAP.md  README.md  SETUP_GUIDE.md  TECHNICAL_IMPLEMENTATION_GUIDE.md  USER_GUIDE.md  app.py  check_export.py  demo_openalgo_queries.py  expirytrack_app.py  export_openalgo_data.py  main.py  pyproject.toml  requirements.txt  run.bat  update_openalgo_symbols.py
.github/workflows/: ci.yml
data/: .gitkeep  README.md
design/: API_RATE_LIMITS.md  APPLICATION_SUMMARY.md  DEVELOPER_QUICKSTART.md  EXPORT_ARCHITECTURE.md  PRODUCT_DOCUMENTATION.md
docs/: Get Expiries API and Example Docs.md  Get Expiries Field Pattern.md  Get Expiries Futures Contract.md  Get Expiries Historical Data.md  Get Expiries Options Contract.md  Get Expiries.md  funds.md  login.md
exports/: .gitkeep  README.md
logs/: .gitkeep  README.md
scripts/: init_database.py  migrate_sqlite_to_duckdb.py  quick_collect.py
src/: __init__.py  config.py
src/analytics/: __init__.py  engine.py  summary.py
src/api/: __init__.py  auth.py  client.py  pagination.py  v1.py  v2.py
src/auth/: __init__.py  manager.py
src/backtest/: __init__.py  engine.py  metrics.py  presets.py  sandbox.py  strategy.py
src/backup/: manager.py
src/collectors/: __init__.py  candle_collector.py  expiry_tracker.py  task_manager.py
src/database/: __init__.py  manager.py
src/export/: __init__.py  exporter.py  importer.py
src/instruments/: __init__.py  master.py
src/notifications/: manager.py
src/quality/: __init__.py  checker.py
src/routes/: __init__.py  admin.py  analytics.py  auth.py  backtest.py  candles.py  collect.py  errors.py  export.py  helpers.py  instruments.py  sse.py  status.py  (+3 more)
templates/: analytics.html  backtest.html  base.html  calendar.html  chart_viewer.html  collect.html  collect_wizard.html  dashboard.html  data_comparison.html  data_management.html  download_status.html  expiry_comparison.html  export_wizard.html  help.html  import.html  index.html  index_expiry.html  instruments.html  oi_analysis.html  option_chain.html  settings.html  status.html
tests/: conftest.py  test_analytics_engine.py  test_analytics_summary.py  test_api_client.py  test_api_v1.py  test_api_v2.py  test_app_routes.py  test_auth_manager.py  test_backtest_engine.py  test_backup_manager.py  test_database_manager.py  test_expiry_tracker.py  test_exporter.py  test_helpers.py  test_instruments_master.py  test_persistent_tracker.py  test_quality_checker.py  test_repos_candles.py  test_repos_contracts.py  test_repos_credentials.py  test_repos_historical.py  test_repos_instrument_master.py  test_repos_instruments.py  test_repos_jobs.py  test_repos_tasks.py  test_repos_watchlists.py  test_routes_admin.py  test_routes_analytics.py  test_routes_auth.py  test_routes_candles.py  test_routes_collect.py  test_routes_error_paths.py  test_routes_export.py  test_routes_instruments.py  test_routes_status.py  test_routes_tasks.py  test_routes_watchlists.py  test_scheduler.py  test_sse.py  test_task_tracker.py
(+44 files in other folders)
