[project]
name = "expirytrack"
version = "1.0.0"
description = "ExpiryTrack Web Interface - Flask Application for tracking options expiry data"
requires-python = ">=3.10"
dependencies = [
    "anyio>=3.7.1",
    "apscheduler>=3.10.0,<4.0.0",
    "duckdb>=1.0.0",
    "flask>=3.0.0",
    "flask-session>=0.5.0",
    "httpx>=0.28.1",
    "loguru>=0.7.0",
    "pandas>=2.3.2",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "cryptography>=46.0.1",
    "openpyxl>=3.1.5",
]

[project.scripts]
expirytrack = "app:app"
