[project]
name = "expirytrack"
version = "1.0.0"
description = "ExpiryTrack Web Interface - Flask Application for tracking options expiry data"
requires-python = ">=3.10"
dependencies = [
    "anyio>=3.7.1",
    "apscheduler>=3.10.0,<4.0.0",
    "duckdb>=1.0.0",
    "flask>=3.0.0",
    "flask-session>=0.5.0",
    "httpx>=0.28.1",
    "loguru>=0.7.0",
    "pandas>=2.3.2",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "cryptography>=46.0.1",
    "openpyxl>=3.1.5",
    "flask-wtf>=1.2.2",
    "flask-limiter>=3.5.0",
    "pydantic>=2.0",
    "pyarrow>=23.0.1",
]

[project.optional-dependencies]

[project.scripts]
expirytrack = "app:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["src.database.*", "src.auth.*", "src.config", "src.tasks.*", "src.analytics.*"]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["src.collectors.*", "src.routes.*", "src.api.*", "src.utils.*"]
disallow_untyped_defs = false
warn_return_any = false
follow_imports = "silent"

[[tool.mypy.overrides]]
module = ["duckdb.*", "apscheduler.*", "tqdm.*", "flask_limiter.*", "flask_wtf.*", "flask_session.*", "pandas.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM105", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.9.0",
]
